--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,22 +2,27 @@ name: onlinebooks
 version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
-environment: 
-  sdk: '>=2.15.0-116.0.dev <3.0.0'
+environment:
+  sdk: ">=2.15.0-116.0.dev <3.0.0"
 
-dependencies: 
+dependencies:
   cupertino_icons: ^1.0.2
   get: 4.3.8
-  flutter: 
+  flutter:
     sdk: flutter
+  hexcolor: ^2.0.5
+  shared_preferences: ^2.0.8
+  dio: ^4.0.0
+  connectivity: ^3.0.6
+  flutter_easyloading: ^3.0.3
+  device_info: ^2.0.2
 
-dev_dependencies: 
+dev_dependencies:
   flutter_lints: ^1.0.0
-  flutter_test: 
+  flutter_test:
     sdk: flutter
 
-flutter: 
-  assets: 
-    - assets/image
+flutter:
+  assets:
+    - assets/image/
   uses-material-design: true
-
