--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   connectivity: ^3.0.6
   flutter_easyloading: ^3.0.3
   device_info: ^2.0.2
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_lints: ^1.0.0
