--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_easyloading: ^3.0.3
   device_info: ^2.0.2
   http: ^0.13.4
+  file_picker: ^4.1.3
 
 dev_dependencies:
   flutter_lints: ^1.0.0
