--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   device_info: ^2.0.2
   http: ^0.13.4
   file_picker: ^4.1.3
+  http_parser: ^4.0.0
 
 dev_dependencies:
   flutter_lints: ^1.0.0
