--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   http: ^0.13.4
   file_picker: ^4.1.3
   http_parser: ^4.0.0
+  syncfusion_flutter_pdfviewer: ^19.3.45-beta
 
 dev_dependencies:
   flutter_lints: ^1.0.0
