impplement admob in all pages

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,9 @@
    <application
         android:label="onlinebooks"
         android:icon="@mipmap/ic_launcher">
+          <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-5946802346170399~2248684112"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
