--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,19 +6,21 @@ environment:
   sdk: ">=2.15.0-116.0.dev <3.0.0"
 
 dependencies:
+  app_tracking_transparency: ^2.0.2+1
+  connectivity: ^3.0.6
   cupertino_icons: ^1.0.2
-  get: 4.3.8
+  device_info: ^2.0.2
+  dio: ^4.0.0
+  file_picker: ^4.1.3
   flutter:
     sdk: flutter
-  hexcolor: ^2.0.5
-  shared_preferences: ^2.0.8
-  dio: ^4.0.0
-  connectivity: ^3.0.6
   flutter_easyloading: ^3.0.3
-  device_info: ^2.0.2
+  get: 4.3.8
+  google_mobile_ads: ^0.13.5
+  hexcolor: ^2.0.5
   http: ^0.13.4
-  file_picker: ^4.1.3
   http_parser: ^4.0.0
+  shared_preferences: ^2.0.8
   syncfusion_flutter_pdfviewer: ^19.3.45-beta
 
 dev_dependencies:
